<resources>
    <string name="app_name">Metronome</string>
    <string name="period">Period in seconds: </string>
    <string name="start_metronome">Start metronome</string>
    <string name="period_alert_dialog_title">Invalid period</string>
    <string name="period_alert_dialog_message">The period must be a positive number. Please, change the period.</string>
    <string name="period_alert_dialog_neutral">OK</string>
    <string name="period_default_value">1,00</string>
    <string name="set_period">Set period</string>
    <string name="set_period_dialog_coma">,</string>
    <string name="set_period_dialog_sec">sec</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="stop_metronome">Stop Metronome</string>
    <string name="cb_sound">Turn on sound</string>
    <string name="cb_vibration">Turn on vibration</string>
    <string name="tpm">TPM:</string>
    <string name="tpm_default_value">60</string>
    <string name="set_tpm">Set TPM</string>
    <string name="tpm_dialogue">TPM</string>
    <string name="add">Add</string>
    <string name="pref_text">Enter name for your perferences:</string>
    <string name="add_preferences">Add preferences</string>
    <string name="load_preferences">Load preferences</string>
    <string name="list_item_text">Name for your preferences here</string>
</resources>
